--- a/website/data/security/advisories.toml
+++ b/website/data/security/advisories.toml
@@ -2,6 +2,10 @@
 # $FreeBSD$
 
 [[advisories]]
+name = "FreeBSD-SA-24:03.unbound"
+date = "2024-03-28"
+
+[[advisories]]
 name = "FreeBSD-SA-24:02.tty"
 date = "2024-02-14"
 
