--- a/website/data/security/advisories.toml
+++ b/website/data/security/advisories.toml
@@ -2,6 +2,10 @@
 # $FreeBSD$
 
 [[advisories]]
+name = "FreeBSD-SA-24:04.openssh"
+date = "2024-07-01"
+
+[[advisories]]
 name = "FreeBSD-SA-24:03.unbound"
 date = "2024-03-28"
 
