--- a/website/data/security/advisories.toml
+++ b/website/data/security/advisories.toml
@@ -2,6 +2,22 @@
 # $FreeBSD$
 
 [[advisories]]
+name = "FreeBSD-SA-24:08.openssh"
+date = "2024-08-07"
+
+[[advisories]]
+name = "FreeBSD-SA-24:07.nfsclient"
+date = "2024-08-07"
+
+[[advisories]]
+name = "FreeBSD-SA-24:06.ktrace"
+date = "2024-08-07"
+
+[[advisories]]
+name = "FreeBSD-SA-24:05.pf"
+date = "2024-08-07"
+
+[[advisories]]
 name = "FreeBSD-SA-24:04.openssh"
 date = "2024-07-01"
 
