--- a/website/data/security/advisories.toml
+++ b/website/data/security/advisories.toml
@@ -2,6 +2,30 @@
 # $FreeBSD$
 
 [[advisories]]
+name = "FreeBSD-SA-24:14.umtx"
+date = "2024-09-04"
+
+[[advisories]]
+name = "FreeBSD-SA-24:13.openssl"
+date = "2024-09-04"
+
+[[advisories]]
+name = "FreeBSD-SA-24:12.bhyve"
+date = "2024-09-04"
+
+[[advisories]]
+name = "FreeBSD-SA-24:11.ctl"
+date = "2024-09-04"
+
+[[advisories]]
+name = "FreeBSD-SA-24:10.bhyve"
+date = "2024-09-04"
+
+[[advisories]]
+name = "FreeBSD-SA-24:09.libnv"
+date = "2024-09-04"
+
+[[advisories]]
 name = "FreeBSD-SA-24:08.openssh"
 date = "2024-08-07"
 
