--- a/website/data/security/advisories.toml
+++ b/website/data/security/advisories.toml
@@ -2,6 +2,14 @@
 # $FreeBSD$
 
 [[advisories]]
+name = "FreeBSD-SA-24:16.libnv"
+date = "2024-09-19"
+
+[[advisories]]
+name = "FreeBSD-SA-24:15.bhyve"
+date = "2024-09-19"
+
+[[advisories]]
 name = "FreeBSD-SA-24:14.umtx"
 date = "2024-09-04"
 
