--- a/website/data/security/advisories.toml
+++ b/website/data/security/advisories.toml
@@ -2,6 +2,18 @@
 # $FreeBSD$
 
 [[advisories]]
+name = "FreeBSD-SA-24:19.fetch"
+date = "2024-10-29"
+
+[[advisories]]
+name = "FreeBSD-SA-24:18.ctl"
+date = "2024-10-29"
+
+[[advisories]]
+name = "FreeBSD-SA-24:17.bhyve"
+date = "2024-10-29"
+
+[[advisories]]
 name = "FreeBSD-SA-24:16.libnv"
 date = "2024-09-19"
 
