Add EN-25:01 through EN-25:03 and SA-25:01 through SA-25:04.
Approved by:	so

--- a/website/data/security/advisories.toml
+++ b/website/data/security/advisories.toml
@@ -2,6 +2,22 @@
 # $FreeBSD$
 
 [[advisories]]
+name = "FreeBSD-SA-25:04.ktrace"
+date = "2025-01-29"
+
+[[advisories]]
+name = "FreeBSD-SA-25:03.etcupdate"
+date = "2025-01-29"
+
+[[advisories]]
+name = "FreeBSD-SA-25:02.fs"
+date = "2025-01-29"
+
+[[advisories]]
+name = "FreeBSD-SA-25:01.openssh"
+date = "2025-01-29"
+
+[[advisories]]
 name = "FreeBSD-SA-24:19.fetch"
 date = "2024-10-29"
 
