--- a/website/data/security/advisories.toml
+++ b/website/data/security/advisories.toml
@@ -2,6 +2,10 @@
 # $FreeBSD$
 
 [[advisories]]
+name = "FreeBSD-SA-25:05.openssh"
+date = "2025-02-21"
+
+[[advisories]]
 name = "FreeBSD-SA-25:04.ktrace"
 date = "2025-01-29"
 
