--- a/website/data/security/advisories.toml
+++ b/website/data/security/advisories.toml
@@ -2,6 +2,10 @@
 # $FreeBSD$
 
 [[advisories]]
+name = "FreeBSD-SA-25:07.libarchive"
+date = "2025-08-08"
+
+[[advisories]]
 name = "FreeBSD-SA-25:06.xz"
 date = "2025-07-02"
 
