--- a/website/data/security/advisories.toml
+++ b/website/data/security/advisories.toml
@@ -2,6 +2,10 @@
 # $FreeBSD$
 
 [[advisories]]
+name = "FreeBSD-SA-25:08.openssl"
+date = "2025-09-30"
+
+[[advisories]]
 name = "FreeBSD-SA-25:07.libarchive"
 date = "2025-08-08"
 
