--- a/website/data/security/advisories.toml
+++ b/website/data/security/advisories.toml
@@ -2,6 +2,10 @@
 # $FreeBSD$
 
 [[advisories]]
+name = "FreeBSD-SA-25:09.netinet"
+date = "2025-10-22"
+
+[[advisories]]
 name = "FreeBSD-SA-25:08.openssl"
 date = "2025-09-30"
 
