Add SA-25:10 and related patches.
Approved by:	so

--- a/website/data/security/advisories.toml
+++ b/website/data/security/advisories.toml
@@ -2,6 +2,10 @@
 # $FreeBSD$
 
 [[advisories]]
+name = "FreeBSD-SA-25:10.unbound"
+date = "2025-11-26"
+
+[[advisories]]
 name = "FreeBSD-SA-25:09.netinet"
 date = "2025-10-22"
 
