Add EN-25:19, EN-25:20, SA-25:11, and SA-25:12.
Approved by:    so

--- a/website/data/security/advisories.toml
+++ b/website/data/security/advisories.toml
@@ -2,6 +2,14 @@
 # $FreeBSD$
 
 [[advisories]]
+name = "FreeBSD-SA-25:12.rtsold"
+date = "2025-12-16"
+
+[[advisories]]
+name = "FreeBSD-SA-25:11.ipfw"
+date = "2025-12-16"
+
+[[advisories]]
 name = "FreeBSD-SA-25:10.unbound"
 date = "2025-11-26"
 
