--- a/website/data/security/advisories.toml
+++ b/website/data/security/advisories.toml
@@ -2,6 +2,14 @@
 # $FreeBSD$
 
 [[advisories]]
+name = "FreeBSD-SA-26:02.jail"
+date = "2026-01-27"
+
+[[advisories]]
+name = "FreeBSD-SA-26:01.openssl"
+date = "2026-01-27"
+
+[[advisories]]
 name = "FreeBSD-SA-25:12.rtsold"
 date = "2025-12-16"
 
