Add SA-26:04 and SA-26:05.
Approved by:	so

--- a/website/data/security/advisories.toml
+++ b/website/data/security/advisories.toml
@@ -2,6 +2,14 @@
 # $FreeBSD$
 
 [[advisories]]
+name = "FreeBSD-SA-26:05.route"
+date = "2026-02-24"
+
+[[advisories]]
+name = "FreeBSD-SA-26:04.jail"
+date = "2026-02-24"
+
+[[advisories]]
 name = "FreeBSD-SA-26:03.blocklistd"
 date = "2026-02-10"
 
